--- a/style.css
+++ b/style.css
@@ -9,13 +9,16 @@ h1{
 h2{
     font-size: 40px;
 }
+h3{
+    font-size: 30px;
+}
 
 .span{
     color: rgb(54, 113, 113);
 }
 .flexible-container{
     display: flex;
-    margin-bottom:150px ;
+    margin-bottom:130px ;
 }
 .half-width{
   width: 50%; 
@@ -32,9 +35,13 @@ h2{
     border-radius: 5px;
     color: aliceblue;
 }
-#second{
-    width: 70%;
+#first-img{
+    margin-top: 120px;
     height: 80%;
+}
+#second-img{
+    width: 70%;
+    
     margin-left: 100px;
 }
 .experience{
@@ -42,14 +49,30 @@ h2{
   padding-left: 5%; 
   padding-right: 5%;
   margin-left: 5%;
-  border-radius: 1%;
   margin-right: 5%;
   box-shadow: 10px 10px 40px gray;
+  padding-bottom: 100px;
 
 }
+.exp{
+    padding-bottom: 50px;
+}
+
 .experience-area{
     background-image: url(exp-bg.png
     );
     background-repeat: no-repeat;
     background-position: left;
+}
+#full-stack{
+    
+    border-left: 10px solid tomato;
+}
+#junior-dev{
+    border-left: 10px solid rgb(137, 71, 71);
+}
+
+footer p{
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
 }
