--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ h3{
     color: aliceblue;
 }
 #first-img{
-    margin-top: 120px;
-    height: 80%;
+    margin-top: 60px;
+   width: 75%;
 }
 #second-img{
     width: 70%;
